Fix: pip install when plugins are empty

--- a/action.yml
+++ b/action.yml
@@ -43,7 +43,11 @@ runs:
       else
         flake8_version="==${{ inputs.flake8_version }}"
       fi
-      pip install flake8${flake8_version} "${{ inputs.plugins }}"
+      plugins=
+      if [ -n "${{ inputs.plugins }}" ]; then
+        plugins="${{ inputs.plugins }}"
+      fi
+      pip install flake8${flake8_version} ${plugins}
     shell: bash
   - run: ${{ github.action_path }}/action/entrypoint.sh
     shell: bash
@@ -53,6 +57,9 @@ runs:
       INPUT_MAX_LINE_LENGTH: ${{ inputs.max_line_length }}
       INPUT_ONLY_WARN: ${{ inputs.only_warn }}
       INPUT_FLAKE8_VERSION: ${{ inputs.flake8_version }}
+      INPUT_PLUGINS: ${{ inputs.plugins }}
+      INPUT_ERROR_CLASSES: ${{ inputs.error_classes }}
+      INPUT_WARNING_CLASSES: ${{ inputs.warning_classes }}
 branding:
   icon: 'code'
   color: 'blue'
